modified:   README.md 	new file:   bg.jpg 	modified:   config.js 	modified:   config.php 	new file:   css/themes/mtip/bootstrap.css 	new file:   css/themes/mtip/style.css 	modified:   css/themes/turtle/bootstrap.css 	modified:   css/themes/turtle/style.css 	deleted:    favicon.ico 	new file:   img/bg.jpg 	deleted:    img/icon_dark.png 	deleted:    img/icon_light.png 	deleted:    img/turtle_shield.svg 	modified:   index.html 	new file:   mtip/bootstrap.css 	new file:   mtip/style.css 	new file:   themes/mtip/bootstrap.css 	new file:   themes/mtip/style.css 	new file:   themes/turtle/bootstrap.css 	new file:   themes/turtle/style.css 	new file:   turtle/bootstrap.css 	new file:   turtle/style.css

--- a/css/themes/mtip/style.css
+++ b/css/themes/mtip/style.css
@@ -31,7 +31,7 @@ body {
     padding-top: 65px;
     padding-bottom: 80px;
     overflow-y: scroll;
-    background-image: url(http://wtippool.worktips.info/pool-background.jpg);
+    background-image: url(img/bg.jpg);
     background-repeat: no-repeat;
     background-position: top center;
 }
